# mastodon

./: .annotaterb.yml  .babelrc  .browserslistrc  .buildpacks  .bundler-audit.yml  .codeclimate.yml  .current-version  .cz.json  .deepsource.toml  .dockerignore  .drone.yml  .editorconfig  .env  .env.development  .env.example  .env.hello.local  .env.local  .env.nanobox  .env.production  .env.production.sample  .env.sample  .env.test  .env.vagrant  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .eslintrc.yml  .foreman  .fossa.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .haml-lint.yml  .haml-lint_todo.yml  .hound.yml  .mailmap  (+159 more)
.allstar/: security.yaml
.circleci/: config.yml
.claude/: settings.local.json
.custom/: apply.sh
.delta-lint/: .gitignore
.dependabot/: config.yml
.design/: README.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer-lock.json  devcontainer.json  docker-compose-redis-sentinel.yml  docker-compose.extend.yml  docker-compose.yml  post-create.sh  welcome-message.txt
.github/: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  FEDERATION.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  codecov.yml  dependabot.yml  pull_request_template.md  renovate.json5  stale.yml  stylelint-matcher.json
.husky/: pre-commit
.rubocop/: custom.yml  i18n.yml  layout.yml  metrics.yml  naming.yml  rails.yml  rspec.yml  rspec_rails.yml  strict.yml  style.yml
.storybook/: main.ts  manager.ts  (+10 more)
vender/bundle/ruby/2.5.0/gems/mini_portile2-2.3.0/test/assets/test-cmake-1.0/: CMakeLists.txt  hello.c
(+30079 files in other folders)
